# biocypher

./: .gitignore  BUILD_PLAN.md  Guide: How to Purchase DNA via IDT.md  LICENSE  README.md  activity.md  app.py  config.py  dna_crypto.py  docker-compose.yml  install.sh  nanopore_dna_crypto.py  requirements.txt  run-arcium-service.sh  run-server.sh  test_secure_nanopore_dna_crypto.py
biocypher/: NANOPORE_OPTIMIZATION.md  PROTOCOL_SPECIFICATION.md  README.md  TESTING_GUIDE.md  app.py  requirements.txt  safety_screener.py  secure_nanopore_dna_crypto.py  test_dna_crypto.py  test_nanopore_dna_crypto.py
biocypher-arcium-service/: README.md  package-lock.json  package.json  tsconfig.json
biocypher-arcium-service/src/: arcium-client.ts  index.ts
biocypher-mxe/: .gitignore  Anchor.toml  package.json  rust-toolchain.toml  tsconfig.json
biocypher-mxe/artifacts/: circuits_hash.txt
biocypher-mxe/encrypted-ixs/src/: lib.rs
biocypher-mxe/programs/biocypher-mxe/: Cargo.toml
biocypher-mxe/tests/: biocypher-mxe.ts
biocypher-programs/: Anchor.toml
biocypher-programs/programs/biocypher-storage/: Cargo.toml
biocypher-programs/programs/biocypher-storage/src/: lib.rs
biocypher-programs/tests/: biocypher-storage.ts
biocypher-rust-solana/: Cargo.toml  Dockerfile
biocypher-rust-solana/backend/: Cargo.toml
biocypher-rust-solana/backend/src/: arcium.rs  error.rs  lib.rs  main.rs  models.rs
biocypher-rust-solana/backend/src/api/: build_attest.rs  decode.rs  encode.rs  mod.rs  safety.rs  solana.rs
biocypher-rust-solana/backend/src/dna/: basic.rs  mod.rs  nanopore.rs  secure.rs  split_key.rs  traits.rs
biocypher-rust-solana/backend/src/safety/: mod.rs  screener.rs
biocypher-rust-solana/backend/src/solana/: client.rs  mod.rs
biocypher-rust-solana/static/: index.html  offline.html
biocypher-rust-solana/tasks/: IMPLEMENTATION_PROGRESS.md
biocypher/biocypher_cli/: STANDARDIZATION_PROTOCOL.md  biocypher_cli.py  decoded.txt  encoded.dna  epstein.txt  setup.py  test_message.txt
biocypher/static/: dna-favicon-32.html  favicon.html
biocypher/templates/: encode.html  error.html
biocypher_cli/: README.md  USAGE_EXAMPLES.md  install.sh  requirements.txt
biocypher_cli/cli/: commands.py  formatters.py
biocypher_cli/config/: __init__.py
biocypher_cli/core/: secure_crypto.py
docs/: ARCIUM_EDUCATIONAL_GUIDE.md  PROJECT_README.md  QUICK_REFERENCE.md  SUMMARY.md  activity.md
static/: generate_png.html  svg_to_png.html
static/css/: style.css
static/js/: script.js
tasks/: DETAILED_IMPLEMENTATION_PLAN.md  TODO_RUST_SOLANA.md  todo.md
templates/: contact.html  dashboard.html  decode.html  encode.html  error.html  index.html  login.html
(+9 files in other folders)
