[workspace]
members = [
    "backend",
    # "programs/biocypher-encoder",
    # "programs/biocypher-decoder",
    # "programs/biocypher-safety",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bi0cyph3r Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
actix-web = "4.4"
actix-cors = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = { version = "0.12", features = ["password-hash", "simple"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"

# Solana (for Phase 2)
# solana-client = "1.17"
# solana-sdk = "1.17"
# anchor-client = "0.29"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
hex = "0.4"

# Testing
mockall = "0.11"
