[package]
name = "biocypher-storage"
version = "0.1.0"
description = "Bi0cyph3r on-chain attestation storage"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "biocypher_storage"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
